fix (about/assets/css/styles.css): footer alignment issues

--- a/about/assets/css/styles.css
+++ b/about/assets/css/styles.css
@@ -518,9 +518,12 @@ img {
 }
 
 .footer-top {
-  text-align: left;
-  max-width: 850px;
-  margin: 1rem auto 2rem;
+   max-width: 850px;
+   margin: 1rem auto 2rem;
+   text-align: left;
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
 }
 
 .footer-title {
